Add full backend and web dashboard updates