@@ -3,13 +3,14 @@ package com.bhavaniprasad.moneymanager.service;
 import com.bhavaniprasad.moneymanager.entity.ProfileEntity;
 import com.bhavaniprasad.moneymanager.repository.ProfileRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -22,7 +23,8 @@ public class AppUserDetailsService implements UserDetailsService {
         return User.builder()
                 .username(existingProfile.getEmail())
                 .password(existingProfile.getPassword())
-                .authorities(Collections.emptyList())
+                .authorities(List.of(new SimpleGrantedAuthority("ROLE_" + existingProfile.getRole().name())))
+                .disabled(Boolean.FALSE.equals(existingProfile.getIsActive()))
                 .build();
     }
 }
